fix: auth guard for sidenav-internal pages & style fixes
light-theme -> fix invisible label in footer
app module -> refactor
subject -> letter-spacing on hover
post-link -> updated layout

--- a/src/app/components/post-link/post-link.component.scss
+++ b/src/app/components/post-link/post-link.component.scss
@@ -7,6 +7,12 @@
   margin-left: -40px;
   margin-right: -40px;
 
+  @include to-md {
+    flex-direction: column;
+
+    margin-right: -20px;
+  }
+
   .label {
     font-size: 1em;
     align-self: center;
@@ -18,6 +24,12 @@
       font-size: 1.2em;
       margin-right: 20px;
       flex-shrink: 0;
+    }
+
+    @include to-md {
+      align-self: start;
+      margin-left: 12px;
+      margin-bottom: 4px;
     }
   }
 
@@ -40,6 +52,11 @@
       flex-direction: column;
     }
 
+    @include to-sm {
+      display: flex;
+      flex-direction: column;
+    }
+
     @media screen and (min-width: 1000px) {
       &:hover {
         background: black;
@@ -58,6 +75,10 @@
         align-self: center;
       }
 
+      @include to-sm {
+        align-self: start;
+      }
+
       .fia-title {
         margin-bottom: 0;
         transition: letter-spacing 400ms ease-out;
@@ -67,13 +88,17 @@
     .fia-description-wrapper {
       display: flex;
 
-      @include from-xs {
-        align-self: center;
+      @include to-xs {
+        margin-top: -5px;
+      }
+
+      @include from-sm {
         flex-direction: row-reverse;
       }
 
-      @include to-xs {
-        margin-top: -5px;
+      @include to-sm {
+        align-self: start;
+        flex-direction: row;
       }
 
       .fia-description {
@@ -85,8 +110,8 @@
           font-size: .85em;
         }
 
-        @include from-xs {
-          min-width: 190px;
+        @include from-sm {
+          min-width: 180px;
         }
       }
 
