--- a/src/app/pages/subject/subject.component.scss
+++ b/src/app/pages/subject/subject.component.scss
@@ -79,8 +79,8 @@
           transition: 100ms;
 
           .fia-link-title {
-            letter-spacing: 0.5px;
-            transition: letter-spacing 400ms ease-out;
+            letter-spacing: 0.3px;
+            transition: letter-spacing 600ms ease-out;
           }
         }
       }
