--- a/src/theme/light-theme.scss
+++ b/src/theme/light-theme.scss
@@ -217,7 +217,7 @@
       }
     }
 
-    .logo span {
+    .logo {
       color: black;
     }
 
